--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     display:inline-block;
     opacity:0;
     transform:translateY(20px) scale(0.9);
-    animation: popIn 0.45s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
+    /* ⬇︎ 재생시간 0.3초로 살짝 짧게 */
+    animation: popIn 0.3s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
   }
 
   .reflection-row {
@@ -46,19 +47,19 @@
   }
 
   .reflection-row span {
-    animation: popInRef 0.45s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
+    animation: popInRef 0.3s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
   }
 
   @keyframes popIn {
     0% { opacity:0; transform:translateY(20px) scale(0.9); }
-    60% { opacity:1; transform:translateY(-4px) scale(1.03); }
+    60% { opacity:1; transform:translateY(-4px) scale(1.06); }
     100% { opacity:1; transform:translateY(0) scale(1); }
   }
 
   @keyframes popInRef {
     0% { opacity:0; transform:translateY(-20px) scale(0.9); }
     60% { opacity:0.55; transform:translateY(4px) scale(1.02); }
-    100% { opacity:0.45; transform:translateY(0) scale(1); }
+    100% { opacity:0.4; transform:translateY(0) scale(1); }
   }
 </style>
 </head>
@@ -77,6 +78,7 @@
       const span = document.createElement('span');
       span.textContent = ch;
       if (ch === " ") span.style.width = "0.7em";
+      // ⬇︎ 한 글자당 0.5초 간격 → 1! (0s) 등! (0.5s) 급! (1.0s) 이런 느낌
       span.style.animationDelay = (idx * delayStep) + "s";
       targetEl.appendChild(span);
     });
@@ -85,9 +87,11 @@
   const main = document.getElementById('title-main');
   const ref  = document.getElementById('title-ref');
 
-  buildLetters(main, text, 0.08);
-  buildLetters(ref,  text, 0.08);
+  // delayStep = 0.5 로 느리게
+  buildLetters(main, text, 0.5);
+  buildLetters(ref,  text, 0.5);
 </script>
 
 </body>
 </html>
+
