--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <script>
-  const text = "1등급을 넘어 수능 만점으로";
+  const text = "앞선 선택, 대학이 달라진다!";
 
   function buildLetters(targetEl, str, delayStep) {
     Array.from(str).forEach((ch, idx) => {
