--- a/index.html
+++ b/index.html
@@ -2,64 +2,101 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<title>텍스트 반사 애니메이션</title>
+<title>텍스트 반사 애니메이션 - Blue</title>
 <style>
+  * {
+    box-sizing: border-box;
+  }
+
   body {
-    background:#fff;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
+    margin: 0;
+    background: linear-gradient(180deg, #e6f1ff 0%, #ffffff 45%, #d9ecff 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: "Pretendard", "Noto Sans KR", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
   .title-wrap {
-    position:relative;
-    display:inline-block;
-    font-family: "Malgun Gothic", "Apple SD Gothic Neo", sans-serif;
-    font-weight:900;
-    font-size:64px;
-    letter-spacing:2px;
-    color:#5b1717;
+    position: relative;
+    display: inline-block;
+    font-weight: 800;
+    font-size: 64px;
+    letter-spacing: 0.08em;
+    color: #123066; /* 메인 딥블루 */
+    text-shadow:
+      0 3px 6px rgba(0, 0, 0, 0.18),
+      0 0 8px rgba(127, 183, 255, 0.65); /* 은은한 하늘색 빛 */
   }
 
   .title-row {
-    white-space:nowrap;
+    white-space: nowrap;
   }
 
   .title-row span {
-    display:inline-block;
-    opacity:0;
-    transform:translateY(20px) scale(0.9);
-    /* ⬇︎ 재생시간 0.3초로 살짝 짧게 */
-    animation: popIn 0.3s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(18px) scale(0.9);
+    animation: popIn 0.28s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
   }
 
+  /* 반사(그림자) 라인 */
   .reflection-row {
-    position:absolute;
-    top:130%;
-    left:0;
-    transform-origin:top;
-    transform:scaleY(-1);
-    opacity:0.55;
-    filter:blur(1px);
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0));
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0));
+    position: absolute;
+    top: 150%;          /* 본문과 간격 넓게 */
+    left: 0;
+    transform-origin: top;
+    transform: scaleY(-1);
+    opacity: 0.45;
+    filter: blur(2px);
+    color: #7da0e8;     /* 좀 더 연한 블루 느낌 */
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0)
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0)
+    );
   }
 
   .reflection-row span {
-    animation: popInRef 0.3s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
+    animation: popInRef 0.28s forwards cubic-bezier(0.25, 1.3, 0.5, 1);
   }
 
+  /* 메인 텍스트 튀어나오는 모션 */
   @keyframes popIn {
-    0% { opacity:0; transform:translateY(20px) scale(0.9); }
-    60% { opacity:1; transform:translateY(-4px) scale(1.06); }
-    100% { opacity:1; transform:translateY(0) scale(1); }
+    0% {
+      opacity: 0;
+      transform: translateY(20px) scale(0.9);
+    }
+    60% {
+      opacity: 1;
+      transform: translateY(-5px) scale(1.06);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
   }
 
+  /* 반사 쪽은 살짝 더 약하게 */
   @keyframes popInRef {
-    0% { opacity:0; transform:translateY(-20px) scale(0.9); }
-    60% { opacity:0.55; transform:translateY(4px) scale(1.02); }
-    100% { opacity:0.4; transform:translateY(0) scale(1); }
+    0% {
+      opacity: 0;
+      transform: translateY(-20px) scale(0.9);
+    }
+    60% {
+      opacity: 0.4;
+      transform: translateY(4px) scale(1.02);
+    }
+    100% {
+      opacity: 0.3;
+      transform: translateY(0) scale(1);
+    }
   }
 </style>
 </head>
@@ -71,25 +108,26 @@
 </div>
 
 <script>
-  const text = "앞선 선택, 대학이 달라진다!";
+  // 👉 여기 텍스트만 나중에 자유롭게 바꿔 쓰면 됨
+  const text = "1등급을 넘어 수능 만점으로";
 
   function buildLetters(targetEl, str, delayStep) {
     Array.from(str).forEach((ch, idx) => {
-      const span = document.createElement('span');
+      const span = document.createElement("span");
       span.textContent = ch;
       if (ch === " ") span.style.width = "0.7em";
-      // ⬇︎ 한 글자당 0.5초 간격 → 1! (0s) 등! (0.5s) 급! (1.0s) 이런 느낌
-      span.style.animationDelay = (idx * delayStep) + "s";
+      // 글자 사이 속도 (지금은 적당히 빠른 느낌)
+      span.style.animationDelay = idx * delayStep + "s";
       targetEl.appendChild(span);
     });
   }
 
-  const main = document.getElementById('title-main');
-  const ref  = document.getElementById('title-ref');
+  const main = document.getElementById("title-main");
+  const ref = document.getElementById("title-ref");
 
-  // delayStep = 0.5 로 느리게
-  buildLetters(main, text, 0.25);
-  buildLetters(ref,  text, 0.25);
+  // 속도 조절: 0.22 ~ 0.28 사이가 깔끔
+  buildLetters(main, text, 0.24);
+  buildLetters(ref, text, 0.24);
 </script>
 
 </body>
