--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <script>
   // 👉 여기 텍스트만 나중에 자유롭게 바꿔 쓰면 됨
-  const text = "1등급을 넘어 수능 만점으로";
+  const text = "앞선 선택, 대학이 달라진다!";
 
   function buildLetters(targetEl, str, delayStep) {
     Array.from(str).forEach((ch, idx) => {
