--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     left: 0;
     transform-origin: top;
     transform: scaleY(-1);
-    opacity: 0.45;
-    filter: blur(2px);
-    color: #7da0e8;     /* 좀 더 연한 블루 느낌 */
+    /* 더 진한 파랑으로 변경 */
+    color: #1e3f80;
+    opacity: 0.55;     /* 좀 더 선명하게 */
+    filter: blur(1px); /* 너무 흐려지지 않게 */
     -webkit-mask-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.6),
