--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
         </div>
       </div>
 
-      <div class="hero-visual">
+      <!--<div class="hero-visual">
         <div>
           <div class="hero-visual-header">나만의 맞춤형 시간표 예시</div>
           <div class="hero-visual-grid">
@@ -717,7 +717,7 @@
           * 실제 시간표는 학생 성적과 과목별 수준에 따라 1:1 설계됩니다.
         </div>
       </div>
-    </div>
+    </div>-->
   </section>
 
   <!-- =====================
