--- a/index.html
+++ b/index.html
@@ -667,12 +667,11 @@
       <div>
         <div class="hero-eyebrow">PYEONGCHON JONGRO</div>
         <h1 class="hero-title">
-          재도전의 성공,<br />
-          평촌종로학원에서<br />
-          매일 증명합니다.
+          앞선 선택,<br />
+          대학이 달라진다!
         </h1>
         <p class="hero-subtitle">
-          완벽한 관리 시스템 · 1:1 책임제 · 하루 루틴 관리로<br />
+          완벽한 관리 시스템 · 1:1 수학책임담임제 · 소수정예 수준별 선택형 맞춤수업<br />
           재수생의 하루를 처음부터 끝까지 설계합니다.
         </p>
 
