--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
     <div class="container hero-inner">
       <div>
         <div class="hero-eyebrow">PYEONGCHON JONGRO</div>
-        <h1 class="hero-title">
+        <h1 class="hero-title" id="heroTitle">
           앞선 선택,<br />
           대학이 달라진다!
         </h1>
