--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
       <div>
         <div class="hero-eyebrow">PYEONGCHON JONGRO</div>
         <h1 class="hero-title" id="heroTitle">
-          앞선 선택,<br />
-          대학이 달라진다!
+          <!--앞선 선택,<br />
+          대학이 달라진다!-->
         </h1>
         <p class="hero-subtitle">
           오직, 학생만을 생각합니다.
