--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
   50.01%, 100% { opacity: 0; }
 }
 
+    .hero-title.done::after {
+  display: none;
+}
+
     .hero-subtitle {
       font-size: 16px;
       opacity: 0.9;
