--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     }
 
     .hero-title {
-      font-size: 36px;
+      font-size: 50px;
       font-weight: 800;
       line-height: 1.3;
       margin-bottom: 16px;
@@ -702,11 +702,11 @@
           <span class="hero-badge">일일테스트 & 피드백</span>
         </div>
 
-        <div class="hero-cta">
+        <!--<div class="hero-cta">
           <a href="#contact" class="btn btn-primary">입학 상담 신청</a>
           <a href="#program" class="btn btn-outline">연간 프로그램 보기</a>
         </div>
-        <!--<div class="hero-note">
+        <div class="hero-note">
           지금 상담 신청 시, 0학기 진단 TEST & 학습 컨설팅 제공
         </div>-->
       </div>
