--- a/index.html
+++ b/index.html
@@ -310,7 +310,26 @@
       padding: 20px;
       box-shadow: var(--shadow-soft);
       border: 1px solid var(--color-border);
+        opacity: 0;
+  transform: translate3d(0, 50px, 0) scale(0.9) rotate(3deg);
+  transition: all 0.7s cubic-bezier(.25,.8,.25,1);
+  --x: calc(-40px + (80px * random()));
+  --y: calc(-40px + (80px * random()));
+  --r: calc(-10deg + (20deg * random()));
+  transform: translate(var(--x), var(--y)) rotate(var(--r)) scale(.9);
+
     }
+
+    .feature-card.show {
+  opacity: 1;
+  transform: translate3d(0, 0, 0) scale(1) rotate(0);
+}
+
+/* 살짝 딜레이 주면 더 자연스러움 */
+.feature-card:nth-child(1) { transition-delay: .05s; }
+.feature-card:nth-child(2) { transition-delay: .12s; }
+.feature-card:nth-child(3) { transition-delay: .18s; }
+.feature-card:nth-child(4) { transition-delay: .24s; }
 
     .feature-icon {
       width: 32px;
@@ -748,7 +767,7 @@
       <div class="section-header">
         <h2 class="section-title">평촌종로학원은 다릅니다.</h2>
         <p class="section-subtitle">
-          학생이 공부만 할 수 있게, 우리는 모든 것을 설계합니다.
+          끝까지 책임지는 평촌종로학원만의 완벽한 관리 시스템
         </p>
       </div>
 
@@ -1098,6 +1117,32 @@
 
     type();
   });
+
+  // 카드 슬라이드
+    document.addEventListener("DOMContentLoaded", () => {
+  const cards = document.querySelectorAll(".feature-card");
+
+  // 랜덤 초기 변환값 넣기
+  cards.forEach(card => {
+    const x = (Math.random() * 80 - 40).toFixed();
+    const y = (Math.random() * 80 - 40).toFixed();
+    const r = (Math.random() * 20 - 10).toFixed();
+
+    card.style.transform =
+      `translate(${x}px, ${y}px) rotate(${r}deg) scale(.9)`;
+  });
+
+  // 스크롤 진입 시 show 클래스 부여
+  const io = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("show");
+      }
+    });
+  }, { threshold: 0.2 });
+
+  cards.forEach(card => io.observe(card));
+});
 </script>
 
 </body>
