--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
       margin-bottom: 16px;
       position: relative;
       display: inline-block;
+      min-height: 120px;
+      
     }
 
     .hero-title::after {
