--- a/index.html
+++ b/index.html
@@ -943,9 +943,9 @@
   <section id="difference">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">평촌종로학원은 다릅니다.</h2>
-        <p class="section-subtitle">
-          끝까지 책임지는 평촌종로학원만의 완벽한 관리 시스템
+         <h2 class="section-title fade-down">평촌종로학원은 다릅니다.</h2>
+        <p class="section-subtitle fade-down delay-1">
+         학습 습관부터 성적까지, 저희는 끝까지 책임집니다.
         </p>
       </div>
 
